macOS - Switch from appbundler to jpackage for packaging